--- a/profile/system/local/BUILD.bazel
+++ b/profile/system/local/BUILD.bazel
@@ -22,5 +22,6 @@ cc_build_profile(
     BINDIR      = "${exec_prefix}/bin",
     EXEC_PREFIX = EXEC_PREFIX,
     LIBDIR      = LIBDIR,
+    # OCAMLLIB    = "//stdlib",
     visibility  = ["//visibility:public"]
 )
