--- a/config/config.ml.json.tplt.in
+++ b/config/config.ml.json.tplt.in
@@ -17,7 +17,18 @@
     "native_pack_linker": "@PACKLD@",
     "default_rpath": "@rpath@",
     "mkdll": "@mkdll_exp@",
-    "mkexe": "@mkexe_exp@",
+    "mkexe": "@mkexe@",
+    "mkexe_args": "@mkexe_args@",
+    "mkexe_cmd": "BAZEL_LINK_CMD @mkexe_args@",
+    "mkexe_exp": "@mkexe_exp@",
+    "mkexe_cflags":  "@mkexe_cflags@",
+    "mkexe_extra_flags":  "@mkexe_extra_flags@",
+    "mkexe_common_cflags":  "@common_cflags@",
+    "mkexe_ldflags_prefix":  "@mkexe_ldflags_prefix@",
+    "mkexe_ldflags":  "@mkexe_ldflags@",
+    "mkexe_ldflags_exp":  "@mkexe_ldflags_exp@",
+    "mkexe_debugflag":  "@mkexedebugflag@",
+
     "mkmaindll": "@mkmaindll_exp@",
     "mksharedlibrpath": "@mksharedlibrpath@",
     "ar": "@AR@",
