--- a/.gitignore
+++ b/.gitignore
@@ -334,6 +334,7 @@ META
 bazel-*
 config/CONFIG.bzl
 config/config.ml.json.tplt
+config/config_sys.ml
 runtime/caml/s.local.h
 profile/cc/local/BUILD.bazel
 toolchain/profile/cc/local/BUILD.bazel
