--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,4 @@
-build --config=show
+# build --config=show
 # query --notool_deps
 # query --noimplicit_deps
 
@@ -18,7 +18,7 @@ run:q --noshow_progress
 
 ## now the default: build --incompatible_override_toolchain_transition
 build --incompatible_enable_cc_toolchain_resolution
-build --toolchain_resolution_debug=.*
+#build --toolchain_resolution_debug=.*
 #build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
 #build --toolchain_resolution_debug=//toolchain/type:.*
 #build --toolchain_resolution_debug=//boot/toolchain/type:.*
@@ -97,7 +97,7 @@ build --workspace_status_command=$PWD/bzl/camlheader.sh
 ################################################################
 ## OCaml platforms: boot, vm, sys
 
-build --config=ocamlc.byte
+# build --config=ocamlc.byte
 
 ## vv_vv
 build:ocamlc.byte --host_platform=//platform/ocaml/local:sys_vm
@@ -127,90 +127,6 @@ build:ocamlopt.opt --//config/target/emitter=sys
 build:ocamlc.opt --host_platform=//platform/ocaml/local:sys_sys
 build:ocamlc.opt --platforms=//platform/ocaml/local:sys_sys
 build:ocamlc.opt --//config/target/emitter=vm
-
-# # default: build --//config/emitter/build:vm
-# # default: build --//config/emitter/target:vm
-
-# build:boot --host_platform=//platform/ocaml/local:boot_build
-# build:boot --platforms=//platform/ocaml/local:boot_target
-
-# build ocamlc.byte from ocamlc.byte
-# build:ocamlc.byte --host_platform=//platform/ocaml/local:sys_vm_vm
-# build:ocamlc.byte --platforms=//platform/ocaml/local:sys_vm_vm
-
-# # build ocamlopt.byte from ocamlc.byte
-# build:ocamlopt.byte --host_platform=//platform/ocaml/local:sys_vm_vm
-# build:ocamlopt.byte --platforms=//platform/ocaml/local:sys_vm_sys
-
-# # build ocamlc.opt from ocamlopt.byte
-# build:ocamlc.opt --host_platform=//platform/ocaml/local:sys_vm_sys
-# build:ocamlc.opt --platforms=//platform/ocaml/local:sys_sys_vm
-
-# # build ocamlopt.opt from ocamlopt.byte
-# build:ocamlopt.opt --host_platform=//platform/ocaml/local:sys_vm_sys
-# build:ocamlopt.opt --platforms=//platform/ocaml/local:sys_sys_sys
-
-# # build ocamlc.opt from ocamlopt.opt
-# build:socamlopt.opt --host_platform=//platform/ocaml/local:sys_sys_sys
-# build:socamlopt.opt --platforms=//platform/ocaml/local:sys_sys_vm
-
-# # build ocamlopt.opt from ocamlopt.opt
-# build:socamlopt.opt --host_platform=//platform/ocaml/local:sys_sys_sys
-# build:socamlopt.opt --platforms=//platform/ocaml/local:sys_sys_sys
-
-
-
-
-################################################################
-# build:ocamlc --host_platform=//platform/ocaml/local:sys_vm_vm_build
-# build:ocamlc --platforms=//platform/ocaml/local:sys_vm_vm_target
-
-# build:ocamlc.byte --host_platform=//platform/ocaml/local:sys_vm_vm_build
-# build:ocamlc.byte --platforms=//platform/ocaml/local:sys_vm_vm_build
-
-# build:ocamlopt.byte --host_platform=//platform/ocaml/local:sys_vm_vm_build
-# build:ocamlopt.byte --platforms=//platform/ocaml/local:sys_vm_sys_target
-
-## to emit sys_sys, build host can be either sys_sys_sys or sys_vm_sys
-# build:ocamlc.opt --host_platform=//platform/ocaml/local:sys_vm_sys_build
-# build:ocamlc.opt --platforms=//platform/ocaml/local:sys_sys_vm_target
-
-# build:ocamlopt.opt --host_platform=//platform/ocaml/local:sys_sys_sys
-# build:ocamlopt.opt --platforms=//platform/ocaml/local:sys_sys
-
-# build:boot --host_platform=//platform/build:boot
-# build:boot --platforms=//platform/target:boot
-
-# build:dev --host_platform=//platform/build:dev
-# build:dev --platforms=//platform/target:dev
-
-# build:vmvm --host_platform=//platform/build:vm
-# build:vmvm --platforms=//platform/target:vm
-
-# build:sysvm --host_platform=//platform/build:sys
-# build:sysvm --platforms=//platform/target:vm
-
-# build:vmsys --host_platform=//platform/build:vm
-# build:vmsys --platforms=//platform/target:sys
-
-# build:syssys --host_platform=//platform:sys
-# build:syssys --platforms=//platform:sys
-
-# #### cross-compilation
-# build:vmvmsys --host_platform=//platform:vm
-# build:vmvmsys --platforms=//platform/xtarget=sys
-
-
-################################################################
-## enable debug for ocamlrun:
-## build --//config/debug:ocamlrun
-
-# build:stage1 --//bzl/toolchain:ocamlc=//compilers/stage1:ocamlc
-# build:stage1 --//bzl:stage=0
-
-# build:stage2 --//bzl/toolchain:ocamlc=//compilers/stage2:ocamlc
-# build:stage2 --//bzl:stage=1
-
 
 try-import .config/dev.bazelrc
 try-import .config/user.bazelrc
