--- a/config/mode/BUILD.bazel
+++ b/config/mode/BUILD.bazel
@@ -7,9 +7,9 @@ load("@bazel_skylib//rules:common_settings.bzl",
 bool_flag( name = "pedantic", build_setting_default = False)
 config_setting(name = "pedantic?", flag_values = {":pedantic": "True"})
 
-bool_flag(name = "instrumented", build_setting_default = False)
-config_setting(name = "instrumented?",
-               flag_values = {":instrumented": "True"})
+# bool_flag(name = "instrumented", build_setting_default = False)
+# config_setting(name = "instrumented?",
+#                flag_values = {":instrumented": "True"})
 
 # string_flag(
 #     name = "mode",
